Fix truncation of long .btn

--- a/src/css/helpers.css
+++ b/src/css/helpers.css
@@ -19,6 +19,11 @@ BUTTONS
   font-weight: 500;
   box-shadow: currentColor 0 0 0 1px;
   padding: 0.3em 0.6em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: inline-block;
+  overflow: hidden;
+  max-width: 100%;
 
   &:not([disabled]) {
     cursor: pointer;
@@ -812,4 +817,12 @@ TYPOGRAPHY
 .checkbox-fix {
   position: relative;
   top: -1px;
+}
+
+.truncate {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: inline-block;
+  overflow: hidden;
+  max-width: 100%;
 }
